# HRBuddy

./: README.md  main.ipynb  pyproject.toml
storage/: default__vector_store.json  docstore.json  index_store.json
